add property to skipIntegrationTests in order to run test grid tests